Server port adicionado!

--- a/sistema/src/main/resources/application.properties
+++ b/sistema/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.password= 123Mudar@
 spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
+server.port=${PORT:8080}
